deploy/automated/bug-scrub-web-patch.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bug-scrub-web
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: bug-scrub-web
        image: img.hephy.pro/fluxcd/flux-pr-review:0.5.11 # {"$imagepolicy": "bug-scrub:edge"}
