deploy/automated/_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bug-scrub-web
spec:
  rules:
  - host: fix.me
    http:
      paths:
      - backend:
          service:
            name: bug-scrub-web
            port:
              number: 80
        path: /
        pathType: Prefix
